--- a/style.css
+++ b/style.css
@@ -7,6 +7,31 @@ html, body, .container {
 	width: 100%;
 	margin: 0;
 }
+/*Testing navigation bar*/
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
+}
+/*End of navigation bar*/
 
 body {
 	/* Background image for the page */
