--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ html, body, .container {
 	width: 100%;
 	margin: 0;
 }
-head { body {margin:0;}
+head { body 
+{margin:0;}
 ul {
     list-style-type: none;
     margin: 0;
