--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Slabo+27px);
 
 /* Reset margins and fill entire space */
-html, head, body, .container {
+html, body, .container {
 	height: 100%;
 	width: 100%;
 	margin: 0;
