--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ html, body, .container {
 head { body 
 {margin:0;}
 ul {
+    position: fixed;
+    top: 0;
+    width: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
