--- a/style.css
+++ b/style.css
@@ -2,47 +2,11 @@
 @import url(http://fonts.googleapis.com/css?family=Slabo+27px);
 
 /* Reset margins and fill entire space */
-html, head, body, .container {
+html, body, .container {
 	height: 100%;
 	width: 100%;
 	margin: 0;
 }
-head { body 
-{margin:0;}
-ul {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: #4CAF50;
-}
-}
-
 
 body {
 	/* Background image for the page */
