--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
     position: fixed;
     top: 0;
     list-style-type: none;
+    overflow: hidden;
+    background-color: #ddd;
     margin: 0;
     padding: 0;
     width: 100%;
