--- a/style.css
+++ b/style.css
@@ -45,13 +45,11 @@ body {
     padding: 14px 16px;
 }
 
-.nav li a:hover:not(.active) 
-{
-    background-color: #ddd;
+li a:hover:not(.active) {
+    background-color: #111;
 }
-.nav li a.active
-{
-    color: white;
+
+.active {
     background-color: #4CAF50;
 }
 
