--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     top: 0;
     list-style-type: none;
     overflow: hidden;
-    background-color: #ddd;
+    background-color: #333;
     margin: 0;
     padding: 0;
     width: 100%;
