--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background: rgba(0, 0, 0, 0.6);
     position: fixed;
     top: 0;
     width: 100%;
