--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .nav li a {
     display: block;
-    color: #111;
+    color: white;
     text-align: center;
     padding: 14px 16px;
 }
