--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body, .nav, .container {
 
 body {
 	/* Background image for the page */
+	margin-top:30px;
 	background: #254463 url('background.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
