--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html, body, .nav, .container {
 
 body {
 	/* Background image for the page */
-	margin-top:30px;
 	background: #254463 url('background.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -57,6 +56,7 @@ li a:hover:not(.active) {
 /* Contains the main content, limits its width, and centers the content */
 .container {
 	margin: auto;
+	margin-top:30px
 	max-width: 66%;
 	
 	height: 100%;
