--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ li a:hover:not(.active) {
 /* Contains the main content, limits its width, and centers the content */
 .container {
 	margin: auto;
-	margin-top:30px
+	margin-top:30px;
 	max-width: 66%;
 	
 	height: 100%;
