--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 .nav ul
 {
     list-style-type: none;
+    font-family: 'Slabo 27px', serif;
     margin: 0;
     padding: 0;
     overflow: hidden;
