--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 {
     list-style-type: none;
     font-family: 'Slabo 27px', serif;
+    font-weight: bold;
     margin: 0;
     padding: 0;
     overflow: hidden;
