--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .nav ul
 {
-    text-decoration: none
+    text-decoration: none;
     list-style-type: none;
     font-family: 'Slabo 27px', serif;
     margin: 0;
