--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 {
     list-style-type: none;
     font-family: 'Slabo 27px', serif;
-    font-weight: bold;
+    font-weight: 400;
     margin: 0;
     padding: 0;
     overflow: hidden;
