--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ li a:hover:not(.active) {
 
 /* Contains the main content, limits its width, and centers the content */
 .container {
-	margin: auto;
+	margin: 0;
 	max-width: 66%;
 	
 	height: 100%;
