--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ li a:hover:not(.active) {
 
 /* Contains the main content, limits its width, and centers the content */
 .container {
+	position: relative;
 	margin: auto;
 	max-width: 66%;
 	
