--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ li a:hover:not(.active) {
 
 /* Contains the main content, limits its width, and centers the content */
 .container {
-	position: relative;
+	position: 0;
 	margin: auto;
 	max-width: 66%;
 	
