--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .nav ul
 {
-    overflow: auto;
+    overflow: hidden;
     list-style-type: none;
     font-family: 'Slabo 27px', serif;
     font-weight: 600;
