--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Slabo+27px);
 
 /* Reset margins and fill entire space */
-html, body, .nav, .container {
+html, body, .container {
 	height: 100%;
 	width: 100%;
 	margin: 0;
@@ -21,18 +21,25 @@ body {
 	font-family: 'Slabo 27px', serif;
 }
 
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 40px;
+  background-color: #111;
+  
+}
+
 .nav ul
 {
-    overflow: hidden;
     list-style-type: none;
-    font-family: 'Slabo 27px', serif;
     font-weight: 600;
     margin: 0;
     padding: 0;
-    background: #111;
-    position: fixed;
-    top: 0;
-    width: 100%;
+
 }
 
 .nav li
@@ -58,7 +65,8 @@ li a:hover:not(.active) {
 
 /* Contains the main content, limits its width, and centers the content */
 .container {
-	margin: auto;
+    margin:auto;
+	margin-top: 40px;
 	max-width: 66%;
 	
 	height: 100%;
@@ -70,8 +78,6 @@ li a:hover:not(.active) {
 
 /* Another container for adding a darkened background and making it fill the entire height */
 .container .inner {
-    position: fixed;
-    top: 48px;
 	height: 100%;
 	background: rgba(0, 0, 0, 0.5);
 	display: table-row;  
