--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
   right: 0;
   z-index: 9999;
   width: 100%;
+  height: 48px;
   background-color: #111;
   
 }
@@ -90,7 +91,7 @@ li a:hover:not(.active) {
 /* Contains the main content, limits its width, and centers the content */
 .container {
     margin:auto;
-	margin-top: 0px;
+	margin-top: 48px;
 	max-width: 66%;
 	
 	height: 100%;
