--- a/style.css
+++ b/style.css
@@ -21,31 +21,7 @@ body {
 	font-family: 'Slabo 27px', serif;
 }
 
-.nav-left {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999;
-  width: 100%;
-  
-}
-
-.nav-left a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    padding: 14px 16px;
-    font-size: 1.5em;
-    font-weight:600;
-    position: absolute;
-    top: -5px;
-  
-}
-
-.nav-right {
+.nav {
   position: fixed;
   top: 0;
   left: 0;
@@ -54,30 +30,33 @@ body {
   width: 100%;
   height: 48px;
   background-color: #111;
-  
 }
 
-.nav-right ul
-{
+.nav ul {
     list-style-type: none;
     font-weight: 600;
     letter-spacing: .075em;
     margin: 0;
     padding: 0;
-
 }
 
-.nav-right li
-{
+.nav li {
     float: right;
 }
 
-.nav-right li a {
+.nav li a {
     display: block;
     color: white;
     text-align: center;
     text-decoration: none;
     padding: 14px 16px;
+}
+
+.nav b {
+  float:left;
+  font-size:1.75em;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 li a:hover:not(.active) {
@@ -138,7 +117,7 @@ i.fa:hover {
 }
 
 /* Make the site look better and fit the page on mobile */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 700px) {
 	h1 {
 		font-size: 2em;
 	}
@@ -159,5 +138,8 @@ i.fa:hover {
 	i.fa {
 		font-size: 2.5em;
 	}
+  .nav b{
+    visibility:collapse;
+  }
 }
 
