--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ body {
   margin-left: 10px;
 }
 
+.nav c {
+  visibility:hidden;
+  }
+
 li a:hover:not(.active) {
     background-color: #333;
 }
@@ -113,7 +117,36 @@ i.fa {
 	-webkit-transition: all 0.3s ease 0s;
 }
 i.fa:hover {
-	color: #00C5DB;
+	color: #c2c2a3;
+}
+
+.footer-links{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 30px;
+  margin-right: 10px;
+}
+
+.footer-mail{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 30px;
+  margin-left: 10px;
+}
+
+.footer-copy{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 15px;
+  background-color: #111;
+  font-size: 0.7em;
+  color: #c2c2a3
 }
 
 /* Make the site look better and fit the page on mobile */
@@ -128,18 +161,68 @@ i.fa:hover {
 		font-size: 1em;
 	}
 	.container {
-		max-width: 90%;
+    margin:auto;
+	margin-top: 48px;
+	max-width: 90%;
+	
+	height: 100%;
+	width: 100%;
+	
+	text-align: center;
+	display: table;
 	}
+  
 	.container .inner .content {
 		margin: 0 16px;
+        margin-top: 48px;
 		padding: 0;
 		min-width: 320;
 	}
-	i.fa {
-		font-size: 2.5em;
+  
+    .nav {
+		position:fixed;
+		min-height: 40px;
 	}
-  .nav b{
-    visibility:collapse;
-  }
+  
+	.nav ul {
+		width: 110px;
+		padding: 0px ;
+		position: absolute;
+		top: 0;
+        height: 48px;
+		right: 0;
+	}
+  
+	.nav li {
+		display:none;
+        margin:0;
+        
+	}
+  
+	.nav li active {
+		display: block; /* show only current <li> item */
+        margin:0; 
+	}
+  
+	.nav li a {
+		background: #111;
+		color: white;
+      
+	}
+	.nav ul:hover li {
+	    list-style-type:none;
+        margin:0;
+        padding: 0;
+        width 100px;
+		display: block;
+        width:110px;
+        background-color: #111;
+		margin:0px;
+	}
+  
+	.nav ul:hover .active {
+		background-color: #c2c2a3;
+	}
 }
+
 
