--- a/style.css
+++ b/style.css
@@ -72,12 +72,10 @@ li a:hover:not(.active) {
 .container {
     margin:auto;
 	margin-top: 48px;
-	max-width: 66%;
+	max-width: 75%;
 	
-	height: 100%;
 	width: 100%;
 	
-	text-align: center;
 	display: table;
 }
 
@@ -112,6 +110,12 @@ li a:hover:not(.active) {
 	padding: 0 32px 32px 24px;
 }
 
+.article .inner .image{
+    margin: 0px 24px 24px 24px;
+	padding: 0px 0px 0px 0px;
+  float:right;
+}
+
 /* Final container for containing the page content, applies padding to the content */
 .container .inner .content {
 	margin: 0 48px;
@@ -121,12 +125,15 @@ li a:hover:not(.active) {
 /* A bit of resizing of the main content items */
 h1 {
 	font-size: 3em;
+    text-align: center;
 }
 h2 {
 	font-size: 1.8em;
+  text-align:justify
 }
 p {
 	font-size: 1.1em;
+  text-align:center
 }
 
 /* Styling for social icons */
@@ -226,14 +233,12 @@ nav ul li.icon{
         margin:0;
         padding: 0;
         width 100px;
+ 
 		display: block;
         width:110px;
         background-color: #111;
 		margin:0px;
 	}
- 
-  
-  
   
     .footer-left i.fa {
 		font-size: 1em;
