--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ html, body, .container {
 }
 
 body {
+	/* Background image for the page */
+	background: #254463 url('images/background.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	/* Page color and font */
 	color: #FFF;
 	font-family: 'Slabo 27px', serif;
