--- a/style.css
+++ b/style.css
@@ -8,6 +8,19 @@ html, body, .container {
 	margin: 0;
 }
 
+body-skills{
+	/* Background image for the page */
+	background: #254463 url('images/checkcanyon.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	/* Page color and font */
+	color: #FFF;
+	font-family: 'Slabo 27px', serif;
+}
+
+
 .navigation {
   position: fixed;
   top: 0;
