--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body, .container {
 
 body-skills{
 	/* Background image for the page */
-	background: #254463 url('images/checkcanyon.jpg') no-repeat center center fixed;
+	background: #254463 url('../images/checkcanyon.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
