--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ body{
 	background-size: cover;
 }
 
+.home{
+	/* Background image for the page */
+	background: #254463 url('../images/background.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 
 .navigation {
   position: fixed;
