--- a/style.css
+++ b/style.css
@@ -32,6 +32,15 @@ body{
 	background-size: cover;
 }
 
+.projects{
+	/* Background image for the page */
+	background: #254463 url('../images/garibaldi.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 
 .navigation {
   position: fixed;
