--- a/style.css
+++ b/style.css
@@ -23,18 +23,18 @@ body{
 	background-size: cover;
 }
 
-.home{
+.about{
 	/* Background image for the page */
-	background: #254463 url('../images/background.jpg') no-repeat center center fixed;
+	background: #254463 url('../images/garibaldi.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 }
 
-.skills{
+.home{
 	/* Background image for the page */
-	background: #254463 url('../images/garibaldi.jpg') no-repeat center center fixed;
+	background: #254463 url('../images/background.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
