--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
 
 .projects{
 	/* Background image for the page */
-	background: #254463 url('../images/checkcanyon.jpg') no-repeat center center fixed;
+	background: #254463 url('../images/garibaldi.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
