--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
 
 .about{
 	/* Background image for the page */
-	background: #254463 url('../images/garibaldi.jpg') no-repeat center center fixed;
+	background: #254463 url('../images/lions.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
