--- a/style.css
+++ b/style.css
@@ -99,10 +99,14 @@ body{
 
 li a:hover:not(.active) {
     background-color: #333;
+    opacity:0.6;
+    
 }
 
 .active {
     background-color: #c2c2a3;
+    opacity:0.6;
+    
 }
 
 .container {
