--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@ body{
 	-o-background-size: cover;
 	background-size: cover;
 }
+
+.projects{
+	/* Background image for the page */
+	background: #254463 url('../images/garibaldilake.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 .about{
 	/* Background image for the page */
 	background: #254463 url('../images/lions.jpg') no-repeat center center fixed;
