--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@ body{
 	background-size: cover;
 }
 
+.about{
+	/* Background image for the page */
+	background: #254463 url('../images/blacktusk.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 .navigation {
   position: fixed;
   top: 0;
