--- a/style.css
+++ b/style.css
@@ -136,7 +136,8 @@ li a:hover:not(.active) {
 .article {
     margin-top: 24;
 	margin-bottom: 24px;
-	max-width: 100%;
+    margin:auto;
+	max-width: 66%;
 	width: 100%;
 	text-align: center;
 	display: table;
@@ -144,7 +145,7 @@ li a:hover:not(.active) {
     border-bottom-style:solid;
     border-color:white;
     border-width:2px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
 }
 .article .inner {
 	display: table-row;  
