--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body{
   display: block;
   width: 100%;
   height: 400px;
-  -webkit-mask-image: url(../images/namemask.png);
-  mask-image: url(../images/namemask.png);
+  -webkit-mask-image: url(../images/namemask.svg);
+  mask-image: url(../images/namemask.svg);
   -webkit-mask-position: center center;
   mask-position: center center;
   -webkit-mask-repeat: no-repeat;
