--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body{
 .nameimg {
   margin: 20px auto;
   display: block;
-  width: 100%;
-  height: 400px;
+  width: 50%;
+  height: 50%;
   -webkit-mask-image: url(../images/namemask.svg);
   mask-image: url(../images/namemask.svg);
   -webkit-mask-position: center center;
