--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body, .container {
 
 body{
 	/* Page color and font */
+	overflow:hidden;
 	color: #FFF;
 	font-family: 'Slabo 27px', serif;	
 }
