--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ li a:hover:not(.active) {
 
 /* Final container for containing the page content, applies padding to the content */
 .container .inner .content {
-	margin: 0 48px;
+	margin: 48px 24px;
 	padding: 0 32px 32px 24px;
 }
 
