--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ body{
   margin: 20px auto;
   display: block;
   width: 75ovpx;
-  -webkit-mask-image: url(../images/stencil.svg);
-  mask-image: url(../images/stencil.svg);
+  -webkit-mask-image: url(../images/stencilsmall.svg);
+  mask-image: url(../images/stencilsmall.svg);
   -webkit-mask-position: center center;
   mask-position: center center;
   -webkit-mask-repeat: no-repeat;
