--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ li a:hover:not(.active) {
 }
 
 .article {
-    margin-top: 24;
+    margin-top: 60px;
     margin-bottom: 24px;
     margin:auto;	
     max-width: 66%;
