--- a/style.css
+++ b/style.css
@@ -232,30 +232,112 @@ nav ul li.icon{
   color: #c2c2a3
 }
 
-/* Make the site look better and fit the page on mobile */
-@media only screen and (max-width: 680px) {
+.pull-right {
+  float: right;
+}
+
+.btn {
+  font-size: 1.0625em;
+  display: inline-block;
+  padding: 0.6em 5em;
+  margin: 1.5em 0 0;
+  color: #fff;
+  border-width: 0 0 0 0;
+  border-bottom: 2px solid;
+  background-color: #fff;
+  border-bottom-color: #fff;
+  font-weight: 600;
+}
+
+.btn.submit {
+  background-color: black;
+  border-bottom-color: #c2c2a3;
+}
+.btn.submit:hover {
+  background-color: #333;
+}
+
+form {
+  max-width: 100%;
+  display: block;
+}
+
+form ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+form ul li {
+  margin: 0 0 0.25em 0;
+  clear: both;
+  display: inline-block;
+  width: 100%;
+}
+
+form ul li:last-child {
+  margin: 0;
+}
+
+form ul li p {
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+
+form ul li p.right {
+  float: right;
+}
+
+form label {
+  display: block;
+  margin: 0 0 0.5em 0;
+  color: #fff;
+  font-size: 1em;
+  font-weight:600;
+}
+
+form input {
+  margin: 0 0 0.5em 0;
+  border: 1px solid #ccc;
+  padding: 6px 10px;
+  color: #555;
+  font-size: 1em;
+}
+
+form textarea {
+  border: 1px solid #ccc;
+  padding: 6px 10px;
+  width: 100%;
+  color: #555;
+}
+
+@media only screen and (max-width: 500px) {
 	h1 {
 		font-size: 2em;
 	}
 	h2 {
-		font-size: 1.2em;
-	}
-	p {
 		font-size: 1em;
 	}
+    h3 {
+        font-size:0.9em;
+    }
+	p {
+		font-size: 0.9em;
+	}
 
-  .container {
+    .container {
 		max-width: 90%;
         margin:auto;
         margin-top:0px;
 	}
-	.container .inner .content {
+	.container .inner {
 		margin: 0 16px;
 		padding: 0;
 		min-width: 320;
 	}
   
-  .article {
+    .article {
     margin-top: 24;
 	margin-bottom: 24px;
 	max-width: 100%;
@@ -272,18 +354,7 @@ nav ul li.icon{
 	display: table-row;  
 	text-shadow: 0px 0px 12px rgba(0, 0, 0, .2);
 }
-
-.article .inner .content{
-    margin: 12px 0px 0px 0px;
-	padding: 0 12px 32px 12px;
-}
-
-/* Final container for containing the page content, applies padding to the content */
-.container .inner .content {
-	margin: 0 48px;
-	padding: 0 32px 32px 24px;
-}
-
+  
 	.navigation ul {
 		width: 100px;
 		padding: 0px ;
@@ -320,7 +391,24 @@ nav ul li.icon{
     .footer-right i.fa{
         font-size: 1em;
     }
+  
+  label {
+    width: 100%;
+    display: inline-block;
+    float: left;
+    clear: both;
   }
+
+  li, p {
+    width: 100%;
+  }
+
+  
+  input.btn {
+    font-size:0.9em;
+    margin: 1.5em 0 0.5em;
+  }
+
 }
 
 
