--- a/style.css
+++ b/style.css
@@ -13,6 +13,34 @@ body{
 	color: #FFF;
 	font-family: 'Slabo 27px', serif;	
 }
+.table_container {
+    display: table;
+width:100%}
+
+.cell {
+    display: table-cell;
+    border: 1px solid #809e9c;
+    padding: 30px 30px;
+    width: 33%;
+    font-size: 1.8em;
+  font-weight:600;
+    text-align:center;}
+
+
+.gutter {
+    display: table-cell;
+    width: 25px; }
+
+a:link {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: #333;
+    background-color: transparent;
+    text-decoration: none;
+}
 
 .nameimg {
   margin: 20px auto;
@@ -317,7 +345,19 @@ form textarea {
   color: #555;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 1200px) {
+  .cell {
+    font-size:1.3em;
+  }
+}
+
+@media only screen and (max-width: 975px) {
+  .cell {
+    font-size:1em;
+  }
+}
+
+@media only screen and (max-width: 850px) {
 	h1 {
 		font-size: 2em;
 	}
