--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ width:100%}
     display: table-cell;
     border: 1px solid #809e9c;
     padding: 30px 30px;
-    width: 33%;
+    width: 200px;
+    height: 200px;
     font-size: 1.8em;
   font-weight:600;
     text-align:center;}
