--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ width:100%}
     background-repeat:   no-repeat;
     background-position: center center;
     display: table-cell;
-    border: 1px solid #809e9c;
+    border: none;
     padding: 30px 30px;
     width: 200px;
     height: 200px;
@@ -36,7 +36,7 @@ width:100%}
 .autocadcell {
   background-image:url(../images/autocad);
     display: table-cell;
-    border: 1px solid #809e9c;
+    border: none;
     padding: 30px 30px;
     width: 33%;
     font-size: 1.8em;
@@ -48,7 +48,7 @@ width:100%}
 .htmlcsscell {
   background-image:url(../images/htmlcss);
     display: table-cell;
-    border: 1px solid #809e9c;
+    border: none;
     padding: 30px 30px;
     width: 33%;
     font-size: 1.8em;
@@ -60,7 +60,7 @@ width:100%}
 .arduinocell {
   background-image:url(../images/arduino);
     display: table-cell;
-    border: 1px solid #809e9c;
+    border: none;
     padding: 30px 30px;
     width: 33%;
     font-size: 1.8em;
@@ -72,7 +72,7 @@ width:100%}
 .drawingcell {
   background-image:url(../images/drawing);
     display: table-cell;
-    border: 1px solid #809e9c;
+    border: none;
     padding: 30px 30px;
     width: 33%;
     font-size: 1.8em;
@@ -84,7 +84,7 @@ width:100%}
 .woodworkcell {
   background-image:url(../images/woodwork);
     display: table-cell;
-    border: 1px solid #809e9c;
+    border: none;
     padding: 30px 30px;
     width: 33%;
     font-size: 1.8em;
