--- a/style.css
+++ b/style.css
@@ -58,13 +58,15 @@ width:100%}
 }
 
 .arduinocell {
-  background:url(../images/arduino.jpg);
-  width: 200px;
-    height: 200px;
+ background:url(../images/arduino.jpg);
+  background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
     display: table-cell;
     border: none;
     padding: 30px 30px;
-    width: 33%;
+    width: 200px;
+    height: 200px;
     font-size: 1.8em;
   font-weight:600;
     text-align:center;
