--- a/style.css
+++ b/style.css
@@ -34,11 +34,15 @@ width:100%}
 }
 
 .autocadcell {
-  background-image:url(../images/autocad);
+  background:url(../images/autocad.jpg);
+  background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
     display: table-cell;
     border: none;
     padding: 30px 30px;
-    width: 33%;
+    width: 200px;
+    height: 200px;
     font-size: 1.8em;
   font-weight:600;
     text-align:center;
