--- a/style.css
+++ b/style.css
@@ -49,6 +49,14 @@ width:100%}
 	vertical-align: middle;
 }
 
+.autocadcell a:link{
+  color:#555;
+}
+
+.autocadcell a:hover{
+  color:#333;
+}
+
 .htmlcsscell {
   background:url(../images/htmlcss.jpg);
   background-size:     cover;
@@ -63,6 +71,14 @@ width:100%}
   font-weight:600;
     text-align:center;
 	vertical-align: middle;
+}
+
+.htmlcsscell a:link{
+  color:#555;
+}
+
+.htmlcsscell a:hover{
+  color:#333;
 }
 
 .arduinocell {
