--- a/style.css
+++ b/style.css
@@ -98,11 +98,15 @@ width:100%}
 }
 
 .drawingcell {
-  background-image:url(../images/drawing);
+  background:url(../images/drawing.jpg);
+  background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
     display: table-cell;
     border: none;
     padding: 30px 30px;
-    width: 33%;
+    width: 200px;
+    height: 200px;
     font-size: 1.8em;
   font-weight:600;
     text-align:center;
@@ -110,11 +114,15 @@ width:100%}
 }
 
 .woodworkcell {
-  background-image:url(../images/woodwork);
+  background:url(../images/woodwork.jpg);
+  background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
     display: table-cell;
     border: none;
     padding: 30px 30px;
-    width: 33%;
+    width: 200px;
+    height: 200px;
     font-size: 1.8em;
   font-weight:600;
     text-align:center;
