--- a/style.css
+++ b/style.css
@@ -447,16 +447,95 @@ form textarea {
   color: #555;
 }
 
-@media only screen and (max-width: 1200px) {
-  .cell {
-    font-size:1.3em;
-  }
+@media only screen and (max-width: 1400px) {
+
+.solidworkscell {
+    padding: 20px 20px;
+    width: 150px;
+    height: 150px;
+    font-size: 1.3em;
+}
+  
+  .autocadcell {
+    padding: 20px 20px;
+    width: 150px;
+    height: 150px;
+    font-size: 1.3em;
+}
+  
+.htmlcsscell {
+    padding: 20px 20px;
+    width: 150px;
+    height: 150px;
+    font-size: 1.3em;
 }
 
-@media only screen and (max-width: 975px) {
-  .cell {
-    font-size:1em;
-  }
+.arduinocell {
+    padding: 20px 20px;
+    width: 150px;
+    height: 150px;
+    font-size: 1.3em;
+}
+  
+  .drawingcell {
+    padding: 20px 20px;
+    width: 150px;
+    height: 150px;
+    font-size: 1.3em;
+}
+  
+.woodworkcell {
+    padding: 20px 20px;
+    width: 150px;
+    height: 150px;
+    font-size: 1.3em;
+}
+  
+  
+}
+
+@media only screen and (max-width: 1075px) {
+.solidworkscell {
+    padding: 20px 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 1.1em;
+}
+  
+  .autocadcell {
+    padding: 20px 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 1.1em;
+}
+  
+.htmlcsscell {
+    padding: 20px 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 1.1em;
+}
+
+.arduinocell {
+    padding: 20px 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 1.1em;
+}
+  
+  .drawingcell {
+    padding: 20px 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 1.1em;
+}
+  
+.woodworkcell {
+    padding: 20px 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 1.1em;
+}
 }
 
 @media only screen and (max-width: 850px) {
