--- a/style.css
+++ b/style.css
@@ -13,9 +13,12 @@ body{
 	color: #FFF;
 	font-family: 'Slabo 27px', serif;	
 }
-.table_container {
+
+.tablecontainer 
+  {
     display: table;
-width:100%}
+    margin:auto;
+    max-width:1400px}
 
 .solidworkscell {
   background:url(../images/solidworks.jpg);
@@ -448,93 +451,137 @@ form textarea {
 }
 
 @media only screen and (max-width: 1400px) {
-
+.container {
+	max-width: 85%;
+    margin:auto;
+    margin-top:0px;
+	}
+  
+.container .inner {
+	margin: 0 16px;
+    padding: 0;
+	max-width:750px;
+	}  
+  
+.container .inner .content{
+	margin: 0 16px;
+	padding: 0;
+	}
+  
+.tablecontainer 
+  {
+    display: table;
+    margin:auto;
+    max-width:675px}
+  
 .solidworkscell {
     padding: 20px 20px;
-    width: 150px;
-    height: 150px;
-    font-size: 1.3em;
+    width: 175px;
+    height: 100px;
+    font-size: 1.7em;
 }
   
   .autocadcell {
     padding: 20px 20px;
-    width: 150px;
-    height: 150px;
-    font-size: 1.3em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
   
 .htmlcsscell {
     padding: 20px 20px;
-    width: 150px;
-    height: 150px;
-    font-size: 1.3em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
 
 .arduinocell {
     padding: 20px 20px;
-    width: 150px;
-    height: 150px;
-    font-size: 1.3em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
   
   .drawingcell {
     padding: 20px 20px;
-    width: 150px;
-    height: 150px;
-    font-size: 1.3em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
   
 .woodworkcell {
     padding: 20px 20px;
-    width: 150px;
-    height: 150px;
-    font-size: 1.3em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
-  
-  
 }
 
 @media only screen and (max-width: 1075px) {
+  
+.container {
+	max-width: 85%;
+    margin:auto;
+    margin-top:0px;
+	}
+  
+.container .inner {
+	margin: 0 16px;
+    padding: 0;
+	max-width:750px;
+	}  
+  
+.container .inner .content{
+	margin: 0 16px;
+	padding: 0;
+	}
+  
+.tablecontainer 
+  {
+    display: table;
+    margin:auto;
+    max-width:675px}
+  
 .solidworkscell {
     padding: 20px 20px;
-    width: 100px;
+    width: 175px;
     height: 100px;
-    font-size: 1.1em;
+    font-size: 1.7em;
 }
   
   .autocadcell {
     padding: 20px 20px;
-    width: 100px;
-    height: 100px;
-    font-size: 1.1em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
   
 .htmlcsscell {
     padding: 20px 20px;
-    width: 100px;
-    height: 100px;
-    font-size: 1.1em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
 
 .arduinocell {
     padding: 20px 20px;
-    width: 100px;
-    height: 100px;
-    font-size: 1.1em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
   
   .drawingcell {
     padding: 20px 20px;
-    width: 100px;
-    height: 100px;
-    font-size: 1.1em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
   
 .woodworkcell {
     padding: 20px 20px;
-    width: 100px;
-    height: 100px;
-    font-size: 1.1em;
+    width: 175px;
+    height: 175px;
+    font-size: 1.7em;
 }
 }
 
@@ -552,16 +599,69 @@ form textarea {
 		font-size: 0.9em;
 	}
 
-    .container {
-		max-width: 90%;
-        margin:auto;
-        margin-top:0px;
+.container {
+	max-width: 90%;
+    margin:auto;
+    margin-top:0px;
 	}
-	.container .inner {
-		margin: 0 16px;
-		padding: 0;
-		min-width: 320;
+.container .inner {
+	margin: 0 16px;
+    padding: 0;
+	max-width:750px;
+	}  
+  
+.container .inner .content{
+	margin: 0 16px;
+	padding: 0;
 	}
+  
+.tablecontainer 
+  {
+    display: table;
+    margin:auto;
+    max-width:460px}
+  
+.solidworkscell {
+    padding: 2px 2px;
+    width: 140px;
+    height: 140px;
+    font-size: 1.4em;
+}
+  
+.autocadcell {
+    padding: 2px 2px;
+    width: 140px;
+    height: 140px;
+    font-size: 1.4em;
+}
+  
+.htmlcsscell {
+    padding: 2px 2px;
+    width: 140px;
+    height: 140px;
+    font-size: 1.4em;
+}
+
+.arduinocell {
+    padding: 2px 2px;
+    width: 140px;
+    height: 140px;
+    font-size: 1.4em;
+}
+  
+.drawingcell {
+    padding: 2px 2px;
+    width: 140px;
+    height: 140px;
+    font-size: 1.4em;
+}
+  
+.woodworkcell {
+    padding: 2px 2px;
+    width: 140px;
+    height: 140px;
+    font-size: 1.4em;
+}
   
     .article {
     margin-top: 24;
@@ -576,6 +676,7 @@ form textarea {
     border-width:2px;
     background: rgba(0, 0, 0, 0.5);
 }
+  
 .article .inner {
 	display: table-row;  
 	text-shadow: 0px 0px 12px rgba(0, 0, 0, .2);
@@ -635,6 +736,74 @@ form textarea {
     margin: 1.5em 0 0.5em;
   }
 
+}
+
+@media only screen and (max-width: 600px) {
+  
+.container {
+	max-width: 90%;
+    margin:auto;
+    margin-top:0px;
+	}
+.container .inner {
+	margin: 0 16px;
+    padding: 0;
+	max-width:510px;
+	}  
+  
+.container .inner .content{
+	margin: 0 16px;
+	padding: 0;
+	}
+  
+.tablecontainer 
+  {
+    display: table;
+    margin:auto;
+    max-width:335px}
+  
+  
+.solidworkscell {
+    padding: 2px 2px;
+    width: 100px;
+    height: 100px;
+    font-size: 0.9em;
+}
+  
+.autocadcell {
+    padding: 2px 2px;
+    width: 100px;
+    height: 100px;
+    font-size: 0.9em;
+}
+  
+.htmlcsscell {
+    padding: 2px 2px;
+    width: 100px;
+    height: 100px;
+    font-size: 0.9em;
+}
+
+.arduinocell {
+padding: 2px 2px;
+    width: 100px;
+    height: 100px;
+    font-size: 0.9em;
+}
+  
+.drawingcell {
+padding: 2px 2px;
+    width: 100px;
+    height: 100px;
+    font-size: 0.9em;
+}
+  
+.woodworkcell {
+padding: 2px 2px;
+    width: 100px;
+    height: 100px;
+    font-size: 0.9em;
+}
 }
 
 @media only screen and (max-width: 400px) {
@@ -704,3 +873,5 @@ form textarea {
     font-size: 0.7em;
 }
 }
+
+
